syntax = "proto3";

package net.devh.boot.grpc.example;

option java_multiple_files = true;
option java_package = "net.devh.boot.grpc.examples.lib";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service MyService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}

//service MyServiceUni {
//  // Sends a greeting
//  rpc SayHello (HelloRequest) returns (stream HelloReply) {
//  }
//}

service MyServiceStream {
  // Sends a greeting
  rpc SayHello (stream HelloRequest) returns (stream HelloReply) {
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}